--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <h1 class="mdc-typography--display1">Hello, World!</h1>
     <button type="button" class="mdc-button mdc-button--raised">
-      Welcome to Lane Tech.
+      Fuck you
     </button>
      <button type="button" class="mdc-button mdc-button--raised">
       Hello World
